An attempt to add approximation for `java.util.zip.CRC32`